crates/core/tests/snapshots/variant_default_test__variant_default__unit_enum.snap
---
source: crates/core/tests/variant_default_test.rs
expression: pretty(container.impl_partial_default_values())
---
fn default_values(
    context: &Self::Context,
) -> std::result::Result<Option<Self>, schematic::ConfigError> {
    Ok(Some(Self::Bar))
}
